# SyncRig-model-VITPose

./: .gitignore  README.md  pyproject.toml
src/syncrig_model_vitpose/: __init__.py  provider.py
