[project]
name = "syncrig-model-vitpose"
version = "0.2.0"
description = "ViTPose provider plug-in for SyncRig (Apache 2.0)"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.13"
dependencies = [
    # ``syncrig-core>=0.3`` is the version that ships the plugin SDK +
    # ``syncrig_core.providers.helpers`` (require_modules / silence_stdout
    # / BackgroundWarmup). Pinning here means a fresh git-URL install
    # via the Extensions tab on an older engine refuses cleanly.
    "syncrig-core>=0.3",
    "syncrig-engine>=0.3",
]

[project.optional-dependencies]
# Runtime extras — torch + transformers stack. Split so a user who
# only wants capabilities() introspection can import the package
# without pulling torch.
runtime = [
    "torch>=2.0",
    "torchvision",
    "transformers>=5.3.0",
    "pillow>=10.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
]

[project.entry-points."syncrig.providers"]
# Engine's ``ProviderRegistry.autoload_entry_points("syncrig.providers")``
# at startup discovers this and imports it. Importing the package runs
# its ``__init__.py`` which registers the VitPoseProvider class with
# the engine's ProviderRegistry (COCO_17 topology is already a built-in
# in syncrig_core, so no topology registration is needed here).
vitpose = "syncrig_model_vitpose.provider:VitPoseProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syncrig_model_vitpose"]
